--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=#
 spring.datasource.password=#
 spring.datasource.username=#
+
+spring.data.rest.base-path=/api
+spring.data.rest.default-page-size=2
